# parals

./: README.md
lab1/: CMakeLists.txt  Makefile  README.md  task1.cpp
lab2/task1/: CMakeLists.txt  main_1.cpp  table_1.xlsx
lab2/task2/: CMakeLists.txt  main_2.cpp  table_2.xlsx
lab2/task3/: CMakeLists.txt  main_3.cpp  table_3.xlsx
lab3/task1/: CMakeLists.txt  main_1.cpp  table_1.xlsx
lab3/task2/: CMakeLists.txt  main_2.cpp
lab4/: task4.py
